# MeetingServer

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.local  Dockerfile.package  Dockerfile.production  docker-compose.aws.yml  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml  deploy.yml.disabled
config/: app.docker.json  app.example.json  logger_config.json  thread_pool.json
db/migrations/: 001_init.sql  001_init_down.sql
deploy/: app.prod.json  docker-compose-infra.yml
docs/: architecture.md  meeting-service-implementation.md  user-service-implementation.md
proto/: common.proto  health.proto  meeting_service.proto  user_service.proto
scripts/: build.sh  migrate.sh  run_server.sh  run_tests.sh
src/: CMakeLists.txt  README.md
src/cache/: redis_client.cpp  redis_client.hpp
src/client/: health_client.cpp
src/common/: config.hpp  config_loader.cpp  config_loader.hpp  config_path.hpp.in  logger.cpp  logger.hpp  status.hpp  status_or.hpp
src/core/meeting/: cached_meeting_repository.cpp  cached_meeting_repository.hpp  errors.hpp  meeting_manager.cpp  meeting_manager.hpp  meeting_repository.cpp  meeting_repository.hpp
src/core/user/: cached_session_repository.cpp  cached_session_repository.hpp  cached_user_repository.cpp  cached_user_repository.hpp  errors.hpp  session_manager.cpp  session_manager.hpp  session_repository.cpp  session_repository.hpp  user_manager.cpp  user_manager.hpp  user_repository.cpp  user_repository.hpp
src/geo/: geo_location_service.cpp  geo_location_service.hpp
src/registry/: server_registry.cpp  server_registry.hpp
src/scheduler/: load_balancer.cpp  load_balancer.hpp
src/server/: health_service.cpp  health_service.h  main.cpp  meeting_service_impl.cpp  meeting_service_impl.hpp  user_service_impl.cpp  user_service_impl.hpp
src/storage/mysql/: connection.cpp  connection.hpp  connection_pool.cpp  connection_pool.hpp  meeting_repository.cpp  meeting_repository.hpp  options.hpp  session_repository.cpp  session_repository.hpp  transaction.cpp  transaction.hpp  user_repository.cpp  user_repository.hpp
src/thread_pool/include/: logger.hpp
src/thread_pool/include/mpmc/: blocking_queue_adapter.hpp  bounded_circular_queue.hpp
src/thread_pool/include/thread_pool/: config.hpp  fwd.hpp  thread_pool.hpp
src/thread_pool/src/: config.cpp  logger.cpp  thread_pool.cpp
src/utils/: geo_lookup.cpp
tests/: CMakeLists.txt
tests/integration/: run_e2e.sh  test_e2e.py
tests/unit/: config_logger_test.cpp  meeting_manager_test.cpp  meeting_service_test.cpp  mysql_flow_tests.cpp  mysql_meeting_tests.cpp  mysql_test.cpp  mysql_user_test.cpp  redis_client_test.cpp  redis_flow_test.cpp  test_geo_location_service.cpp  test_mysql_utils.hpp  test_server_registry.cpp  user_manager_test.cpp  user_service_test.cpp
web_client/: package-lock.json  package.json  run_client.sh  server.js
web_client/public/: app.js  index.html
